[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/Background.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/World.gd" type="Script" id=2]
[ext_resource path="res://src/Canvas.gd" type="Script" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 0.439216 )

[node name="World" type="Node2D"]
script = ExtResource( 2 )

[node name="Canvas" type="CanvasLayer" parent="."]
script = ExtResource( 3 )

[node name="Panel" type="Panel" parent="Canvas"]
self_modulate = Color( 1, 1, 1, 0.411765 )
margin_right = 1280.0
margin_bottom = 40.0
custom_styles/panel = SubResource( 1 )

[node name="CreatePlayer" type="Button" parent="Canvas/Panel"]
margin_left = 11.0
margin_top = 10.0
margin_right = 77.0
margin_bottom = 30.0
text = "Create Player"
flat = true

[node name="CreateCard" type="Button" parent="Canvas/Panel"]
margin_left = 1030.0
margin_top = 10.0
margin_right = 1124.0
margin_bottom = 30.0
text = "Create Card"
flat = true

[node name="CreateClass" type="Button" parent="Canvas/Panel"]
margin_left = 918.0
margin_top = 10.0
margin_right = 1012.0
margin_bottom = 30.0
text = "Create Class"
flat = true

[node name="Create5Cards" type="Button" parent="Canvas/Panel"]
margin_left = 670.0
margin_top = 10.0
margin_right = 774.0
margin_bottom = 30.0
text = "Create 5 Cards"
flat = true

[node name="RemoveAll" type="Button" parent="Canvas/Panel"]
margin_left = 302.0
margin_top = 10.0
margin_right = 396.0
margin_bottom = 30.0
text = "Remove all cards"
flat = true

[node name="CreateCharacter" type="Button" parent="Canvas/Panel"]
margin_left = 1142.0
margin_top = 10.0
margin_right = 1259.0
margin_bottom = 30.0
text = "Create Character"
flat = true

[node name="InputPlayerName" type="LineEdit" parent="Canvas/Panel"]
margin_left = 113.0
margin_top = 8.0
margin_right = 294.0
margin_bottom = 32.0
custom_styles/read_only = SubResource( 2 )
custom_styles/focus = SubResource( 2 )
custom_styles/normal = SubResource( 2 )
placeholder_text = "..."

[node name="Background" parent="." instance=ExtResource( 1 )]

[node name="Cards" type="Node2D" parent="."]
position = Vector2( 640, 360 )

[node name="Camera" type="Camera2D" parent="."]
position = Vector2( 640, 360 )
rotating = true
current = true

[node name="Tween" type="Tween" parent="."]
